# 3d-point-cloud-segmentation

./: README.md  main.py
cpp/: CMakeLists.txt  main.cpp
